feat(server): Q-044 fix ChatController mode B/C context injection
修复 ChatController 模式 B/C 占位符（设计 03 § 4-5）。

新增：
- ContextExtractor（history 包）：3 策略提取上周计划 + 风险
  - 策略 1：metadata.last_week_plan / last_week_risks 直接键
  - 策略 2：metadata.decomposedItems 按 section 字段过滤
  - 策略 3：从 content HTML 章节粗略提取（兜底）

修改 ChatController.invokeAgent：
- 模式 B：从 latestReport 调用 ContextExtractor 提取 plan/risks JSON 数组
  (替代旧代码：metadata.toString() 整张表 dump)
- 模式 C：把模板 followupQuestions List<Followup> 序列化为 JSON 字符串
  (替代旧代码：字面量 "[]")
- 新增 sendDoneEvent metadata 加 mode 字段供前端判断
- 新增 escapeJson 工具（手动拼 JSON 时防引号破坏结构）

测试（curl SSE）：
- 模式 B → 200 + 调用 generateContextualQuestions（plan/risks 是 JSON 数组）
- 模式 C → 200 + 调用 generateFollowup（followupJson 是结构化 JSON）
- LLM 错误归类为 INTERNAL_ERROR（等 API key 联调）